Parallelize font loading and modernize string building
- Load embedded and CID-identity font sources concurrently on virtual
  threads in PDFFontSourceManager
- Narrow the OpenType font-file cache lock so loading does not block
  unrelated lookups; use holder idiom for the default font source manager
- Replace StringBuffer with StringBuilder in font parsers

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>